fix scrollbar

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -13,7 +13,8 @@ html {
   overflow-y: auto;
   line-height: 1.5;
   font-family: "Inter-Regular", "farsi-digit";
-
+  max-width: 100%;
+  max-height: 100vh;
 }
 body {
   margin: 0;
@@ -22,10 +23,9 @@ body {
   font-size: 14px;
   font-weight: normal;
   font-family: "Inter-Regular", "farsi-digit";
-  overflow-y: auto;
+  overflow-y: hidden;
   overflow-x: hidden;
-  // max-height: 100vh;
-
+  max-height: 100vh;
   &.modal-open {
     .custom-scroll {
       overflow-y: hidden;
@@ -245,7 +245,6 @@ a {
   flex-direction: column;
   position: relative;
   min-height: 100vh;
-  min-height: -webkit-fill-available;
   overflow-y: auto;
   .chatbox-header {
     padding: 0.7rem;
